More doc fixes (@author, @since, added docs for Float/Double).