@@ -27,27 +27,48 @@ package java.lang;
  * Additionally, this class provides various helper functions and variables
  * related to floats.
  *
+ * @author Paul Fisher
  * @since JDK 1.0
  */
 public final class Float extends Number 
 {
+    /**
+     * The minimum positive value a <code>float</code> may represent
+     * is 1.4e-45.
+     */
     public static final float MIN_VALUE = 1.4e-45f;
+
+    /**
+     * The maximum positive value a <code>double</code> may represent
+     * is 3.4028235e+38f.
+     */
     public static final float MAX_VALUE = 3.4028235e+38f;
+
+    /**
+     * The value of a float representation -1.0/0.0, negative infinity.
+     */
     public static final float NEGATIVE_INFINITY = -1.0f/0.0f;
+
+    /**
+     * The value of a float representation 1.0/0.0, positive infinity.
+     */
     public static final float POSITIVE_INFINITY = 1.0f/0.0f;
+
+    /**
+     * All IEEE 754 values of NaN have the same value in Java.
+     */
     public static final float NaN = 0.0f/0.0f;
     
     public static final int WIDEFP_SIGNIFICAND_BITS = 24;
     public static final int WIDEFP_MIN_EXPONENT = -126;
     public static final int WIDEFP_MAX_EXPONENT = 127;
     
-    
     /**
      * The primitive type <code>float</code> is represented by this 
      * <code>Class</code> object.
      */
     public static final Class TYPE = VMClassLoader.getPrimitiveClass("float");
-    
+
     private float value;
 
     static
@@ -90,6 +111,7 @@ public final class Float extends Number
     /**
      * Convert the <code>float</code> value of this <code>Float</code>
      * to a <code>String</code>
+     * @return the <code>String</code> representation of this <code>Float</code>.
      */
     public String toString() {
 	return toString(value);
@@ -100,6 +122,9 @@ public final class Float extends Number
      * <code>instanceof</code> <code>Float</code>, and represents
      * the same primitive <code>float</code> value return 
      * <code>true</code>.  Otherwise <code>false</code> is returned.
+     *
+     * @param obj the object to compare to
+     * @return whether the objects are semantically equal.
      */
     public boolean equals(Object obj) 
     {
@@ -108,68 +133,149 @@ public final class Float extends Number
 
     /**
      * Return a hashcode representing this Object.
-	 * <code>Float</code>'s hash code is calculated by calling the
-	 * <code>floatToIntBits()</code> function.
-	 * @return this Object's hash code.
-	 * @see java.lang.Float.floatToIntBits(float)
+     * <code>Float</code>'s hash code is calculated by calling the
+     * <code>floatToIntBits()</code> function.
+     * @return this Object's hash code.
+     * @see java.lang.Float.floatToIntBits(float)
      */    
     public int hashCode() 
     {
 	return floatToIntBits(value);
     }
-
+    /**
+     * Return the value of this <code>Double</code> when cast to an 
+     * <code>int</code>.
+     */
     public int intValue() 
     {
 	return (int)value;
     }
-    
+
+    /**
+     * Return the value of this <code>Double</code> when cast to a
+     * <code>long</code>.
+     */    
     public long longValue() 
     {
 	return (long)value;
     }
-
+    
+    /**
+     * Return the value of this <code>Double</code> when cast to a
+     * <code>float</code>.
+     */
     public float floatValue() 
     {
-	return value;
+	return (float)value;
     }
-    
+
+    /**
+     * Return the primitive <code>double</code> value represented by this
+     * <code>Double</code>.
+     */    
     public double doubleValue() 
     {
 	return value;
     }
     
+    /**
+     * Convert the <code>float</code> to a <code>String</code>.
+     * @param f the <code>float</code> to convert
+     * @return the <code>String</code> representing the <code>float</code>.
+     */
     public native static String toString(float f);
 
+    /**
+     * Return the result of calling <code>new Float(java.lang.String)</code>.
+     *
+     * @param s the <code>String</code> to convert to a <code>Float</code>.
+     * @return a new <code>Float</code> representing the <code>String</code>'s
+     *         numeric value.
+     *
+     * @exception NullPointerException thrown if <code>String</code> is 
+     * <code>null</code>.
+     * @exception NumberFormatException thrown if <code>String</code> cannot
+     * be parsed as a <code>double</code>.
+     */
     public static Float valueOf(String s)
 	throws NullPointerException, NumberFormatException 
     {
-	if (s == null)
-	    throw new NullPointerException("Float.valueOf(String) passed null as argument");
-	
-	return new Float(Float.parseFloat(s));
+	return new Float(s);
     }
     
+    /**
+     * Return <code>true</code> if the value of this <code>Float</code>
+     * is the same as <code>NaN</code>, otherwise return <code>false</code>.
+     * @return whether this <code>Float</code> is <code>NaN</code>.
+     */
     public boolean isNaN() 
     {
 	return isNaN(value);
     }
 
+    /**
+     * Return <code>true</code> if the <code>float</code> has the same
+     * value as <code>NaN</code>, otherwise return <code>false</code>.
+     *
+     * @param d the <code>float</code> to compare
+     * @return whether the argument is <code>NaN</code>.
+     */
     public static boolean isNaN(float v) 
     {
 	return (floatToIntBits(v) == 0x7fc00000);
     }
 
+    /**
+     * Return <code>true</code> if the value of this <code>Float</code>
+     * is the same as <code>NEGATIVE_INFINITY</code> or 
+     * <code>POSITIVE_INFINITY</code>, otherwise return <code>false</code>.
+     *
+     * @return whether this <code>Float</code> is (-/+) infinity.
+     */
     public boolean isInfinite() 
     {
 	return isInfinite(value);
     }
     
-    public boolean isInfinite(float v) 
+    /**
+     * Return <code>true</code> if the <code>float</code> has a value 
+     * equal to either <code>NEGATIVE_INFINITY</code> or 
+     * <code>POSITIVE_INFINITY</code>, otherwise return <code>false</code>.
+     *
+     * @param f the <code>float</code> to compare
+     * @return whether the argument is (-/+) infinity.
+     */
+    public boolean isInfinite(float f) 
     {
-	return (v == POSITIVE_INFINITY || v == NEGATIVE_INFINITY);
+	return (f == POSITIVE_INFINITY || f == NEGATIVE_INFINITY);
     }
 
+    /**
+     * Return the int bits of the specified <code>float</code>.
+     * The result of this function can be used as the argument to
+     * <code>Float.intBitsToFloat(long)</code> to obtain the
+     * original <code>float</code> value.
+     *
+     * @param value the <code>float</code> to convert
+     * @return the bits of the <code>float</code>.
+     */
     public native static int floatToIntBits(float value);
+
+    /**
+     * Return the <code>float</code> represented by the long
+     * bits specified.
+     *
+     * @param bits the long bits representing a <code>double</code>
+     * @return the <code>float</code> represented by the bits.
+     */
     public native static float intBitsToFloat(int bits);
+
+    /**
+     * Parse the specified <code>String</code> as a <code>float</code>.
+     * 
+     * @param str the <code>String</code> to convert
+     * @return the value of the <code>String</code> as a <code>float</code>.
+     * @since JDK 1.2
+     */
     public native static float parseFloat(String s);
 }
